generalize solution to multiple week days
Co-authored-by: klmurussi <klmurussi@hotmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,9 @@
-site_name: "Run Away"
+site_name: "Job Schedule"
 theme:
   name: material
   language: pt
-  logo: images/icon.png
-  favicon: images/icon.png
+  logo: images/calendario.svg
+  favicon: images/calendario.svg
   features:
     - navigation.instant
   palette:
@@ -21,6 +21,6 @@ nav:
   - Início: index.md
   - Ambiete de desenvolvimento: ambiente.md
   - Algoritmo do jogo: code.md
-  - Questões da lista:
-      - Questão 11: questoes/q11.md
-      - Questão 18: questoes/q18.md
+#  - Questões da lista:
+#      - Questão 11: questoes/q11.md
+#      - Questão 18: questoes/q18.md
